# pytorch_studying

./: .gitignore  01_data_manipulation.ipynb  02_automatic_differentiation.ipynb  03_inner_kichen.ipynb  03_notebook.py  04_autograd.ipynb  05_linear_regression.ipynb  06_linear_regression_pytorch.ipynb  07_optimizers.ipynb  08_dataset_devision.ipynb  11_multi_layer_perceptron.ipynb  21_convolutional_neural_network.ipynb  22_training_on_GPU.ipynb  23_convolutional_networks_architectures.ipynb  HW_01_Boston.ipynb  HW_01_California.ipynb  HW_02_multi_layer_neural_network.ipynb  HW_03_cnn_architecture.ipynb  admission.md  main.py  pyproject.toml
convolutional_nn/: conv_nn_01.ipynb  lenet_02.ipynb
part1.ch4/: 1.4.01.image.ipynb  image.ipynb
part1ch2/: 1.2.01_pretrained_models.ipynb
part1ch4/: sheets.ipynb  text.ipynb  time_series.ipynb
rnn/: 06_01_rnn.ipynb  06_02_rnn.ipynb  HW_01_rnn.ipynb  HW_02_rnn.ipynb
