[project]
name = "pytorch-studying"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
  "imageio>=2.37.2",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "kagglehub>=0.3.11",
  "matplotlib>=3.10.1",
  "opencv-python>=4.11.0.86",
  "scipy==1.14.0",
  "seaborn>=0.13.2",
  "torch>=2.6.0",
  "torchsummary>=1.5.1",
  "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
