[project]
name = "pytorch-studying"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
  "imageio>=2.37.2",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "kagglehub>=0.3.11",
  "matplotlib>=3.10.1",
  "opencv-python>=4.11.0.86",
  "pooch>=1.9.0",
  "scipy==1.14.0",
  "seaborn>=0.13.2",
  "torchsummary>=1.5.1",
  "torch>=2.1.0",
  "torchvision>=0.15.0"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
